--- a/.classpath
+++ b/.classpath
@@ -27,6 +27,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="F:/javaEE/eclipse/lombok.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/meifansLibrary"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
