--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/meifansLibrary"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/meifans"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
