--- a/pom.xml
+++ b/pom.xml
@@ -74,11 +74,20 @@
    			<groupId>org.springframework.session</groupId>
     		<artifactId>spring-session</artifactId>
 		</dependency>
-		
-<!-- 		<dependency>
-   			<groupId>org.springframework.boot</groupId>
-   		 	<artifactId>spring-boot-starter-redis</artifactId>
-		</dependency> -->
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.16.8</version>
+      </dependency>
+
+      <!-- 		<dependency>
+                     <groupId>org.springframework.boot</groupId>
+                      <artifactId>spring-boot-starter-redis</artifactId>
+              </dependency> -->
       
       
   </dependencies>
